src/test/resources/example/cocos/valid/validTypes.ocl
import example.CDs.AuctionCD.*;
import example.CDs.DefaultTypes.*;

ocl types {
  inv Test :
     10 m/s == 10m / 1s;
}
