src/test/resources/example/cocos/invalid/invalidInvariantName.ocl
import example.CDs.AuctionCD.*;
import example.CDs.DefaultTypes.*;

ocl invalidInvariantName {
  context AllData _ad, Auction a inv nameInv :
    _ad.auction[a.auctionIdent] == a;
}
